--- a/helm/activemq/charts/daemon/templates/deployment.yaml
+++ b/helm/activemq/charts/daemon/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.persistentvolume.enabled -}}
+{{- if .Values.persistentvolume.create -}}
 # pv
 kind: PersistentVolume
 apiVersion: v1
@@ -8,7 +8,7 @@ metadata:
       # dataType: data
       {{- include "daemon.labels" . | nindent 4 }}
 spec:
-  storageClassName: manual
+  storageClassName: {{ .Values.persistentvolume.class }}
   capacity:
     storage: {{ .Values.persistentvolume.size }}
   accessModes:
@@ -16,6 +16,7 @@ spec:
   hostPath:
     path: {{ .Values.persistentvolume.path }}
 ---
+{{- end }}
 # pv claim
 kind: PersistentVolumeClaim
 apiVersion: v1
@@ -25,17 +26,18 @@ metadata:
     # dataType: data
     {{- include "daemon.labels" . | nindent 4 }}
 spec:
-  storageClassName: manual
+  storageClassName: {{ .Values.persistentvolume.class }}
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: {{ .Values.persistentvolume.size }}
+  {{- if .Values.persistentvolume.selector }}
   selector:
     matchLabels:
       {{- include "daemon.selectorLabels" . | nindent 6 }}
+  {{- end }}
 ---
-{{- end }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -98,10 +100,8 @@ spec:
           volumeMounts:
               # - name: {{ include "daemon.fullname" . }}-logs
               #  mountPath: /var/log/activemq/
-              {{- if .Values.persistentvolume.enabled }}
               - name: {{ include "daemon.fullname" . }}-data
                 mountPath: /data/activemq
-              {{- end }}
               # - name: {{ include "daemon.fullname" . }}-config
               #   mountPath: /opt/activemq/conf
               # - name: {{ include "daemon.fullname" . }}-configmap
@@ -122,11 +122,9 @@ spec:
         # - name: {{ include "daemon.fullname" . }}-logs
         #   persistentVolumeClaim:
         #     claimName: {{ include "daemon.fullname" . }}-logs
-        {{- if .Values.persistentvolume.enabled}}
         - name: {{ include "daemon.fullname" . }}-data
           persistentVolumeClaim:
             claimName: {{ include "daemon.fullname" . }}-data
-        {{- end }}
         # - name: {{ include "daemon.fullname" . }}-conf
         #   persistentVolumeClaim:
         #     claimName: {{ include "daemon.fullname" . }}-conf
