--- a/helm/panda/values.yaml
+++ b/helm/panda/values.yaml
@@ -28,24 +28,26 @@ server:
   #hostcerts:
   #  enabled: false
 
-  # use Route class for ingress
+  # use Route class to expose the service
   route:
     enabled: false
     # host name of the PanDA server
     hostName: "FIXME"
+    
+  # use Ingress class to expose the service  
   ingress:
-    enabled: true
+    enabled: false
     hosts:
-      - domain: cern.ch
-        # hostOverride: panda-k8s-dev-jedi.cern.ch
+      - domain: "FIXME"
+        hostOverride: ""
         paths:
           - path: /
             pathType: Prefix
     tls:
-      - secretName: panda-k8s-dev-jedi-tls-cert
+      - secretName: "FIXME"
         hosts:
-          - domain: cern.ch
-            # hostOverride: panda-k8s-dev-jedi.cern.ch
+          - domain: "FIXME
+            hostOverride: "FIXME"
 
   # ID token of the PanDA service account
   authIdToken: "FIXME"
