--- a/helm/idds/charts/daemon/values.yaml
+++ b/helm/idds/charts/daemon/values.yaml
@@ -16,9 +16,11 @@ autoStart: true
 iddsServer: localhost
 
 persistentvolume:
-  enabled: true
+  create: true
+  class: manual
   path: "/mnt/idds-main-logs"
   size: 5Gi
+
 hostcerts:
   enabled: false
 
@@ -77,7 +79,10 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  httpsPort: 8443
+  httpsPort: 443
+
+ingress:
+  enabled: false
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
