--- a/helm/idds/charts/postgres/values.yaml
+++ b/helm/idds/charts/postgres/values.yaml
@@ -11,7 +11,8 @@ image:
   tag: "13.6"
 
 persistentvolume:
-  enabled: true
+  create: true
+  class: manual
   path: "/mnt/idds-database"
   size: 5Gi
 
@@ -50,6 +51,9 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 5432
+
+ingress:
+  enabled: false
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
