--- a/helm/idds/charts/rest/values.yaml
+++ b/helm/idds/charts/rest/values.yaml
@@ -16,9 +16,11 @@ autoStart: true
 iddsServer: localhost
 
 persistentvolume:
-  enabled: true
+  create: true
+  class: manual
   path: "/mnt/idds-main-logs"
   size: 5Gi
+
 hostcerts:
   enabled: false
 
@@ -77,7 +79,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  httpsPort: 8443
+  httpsPort: 443
 
 ingress:
   enabled: true
