--- a/helm/idds/values-lsst.yaml
+++ b/helm/idds/values-lsst.yaml
@@ -10,6 +10,9 @@ daemon:
     class: wekafs--sdf-k8s01
     create: false
 
+  httpProxy: "http://squid.slac.stanford.edu:3128"
+  httpsProxy: "http://squid.slac.stanford.edu:3128"
+
   conductor:
     brokers: activemq-dev
     port: 61013
@@ -26,6 +29,9 @@ rest:
   persistentvolume:
     class: wekafs--sdf-k8s01
     create: false
+
+  httpProxy: "http://squid.slac.stanford.edu:3128"
+  httpsProxy: "http://squid.slac.stanford.edu:3128"
 
   ingress:
     enabled: true
