--- a/helm/harvester/values.yaml
+++ b/helm/harvester/values.yaml
@@ -7,7 +7,8 @@ harvester:
   enabled: true
   # container image and tag
   image:
-    tag: "v0.2.11"
+    # tag: "v0.2.11"
+    tag: "master"
 
   # PV with selector support
   #persistentvolume:
