--- a/helm/harvester/charts/harvester/templates/configmap.yaml
+++ b/helm/harvester/charts/harvester/templates/configmap.yaml
@@ -41,13 +41,21 @@ data:
   {{- end }}
   {{- if .Values.httpProxy }}
   http_proxy: "{{ .Values.httpProxy }}"
-  no_proxy: "localhost,{{ .Values.panda.host }}"
+  {{- if .Values.noProxy }}
+  no_proxy: "{{ .Values.noProxy }},{{ .Values.panda.host }}"
+  {{- else}}
+  no_proxy: "localhost,{{ include "harvester.fullname" . }},{{ .Values.panda.host }}"
+  {{- end}}
   {{- if .Values.httpsProxy }}
   https_proxy: "{{ .Values.httpProxy }}"
   {{- end }}
   {{- else if .Values.httpsProxy }}
   https_proxy: "{{ .Values.httpsProxy }}"
-  no_proxy: "localhost,{{ .Values.panda.host }},http-{{ .Values.panda.host }}"
+  {{- if .Values.noProxy }}
+  no_proxy: "{{ .Values.noProxy }},{{ .Values.panda.host }},http-{{ .Values.panda.host }}"
+  {{- else}}
+  no_proxy: "localhost,{{ include "harvester.fullname" . }},{{ .Values.panda.host }},http-{{ .Values.panda.host }}"
+  {{- end}}
   {{- end }}
   HARVESTER_ID: "{{ .Values.harvesterID }}"
 ---
