--- a/helm/harvester/values-lsst.yaml
+++ b/helm/harvester/values-lsst.yaml
@@ -10,6 +10,7 @@ harvester:
 
   httpProxy: "http://squid.slac.stanford.edu:3128"
   httpsProxy: "http://squid.slac.stanford.edu:3128"
+  noProxy: "localhost,idds-dev-rest,panda-dev-server"
 
   experiment: "lsst"
 
