--- a/helm/idds/charts/rest/values.yaml
+++ b/helm/idds/charts/rest/values.yaml
@@ -28,8 +28,8 @@ panda:
   panda_auth: "oidc"
   panda_auth_vo: "Rubin:production"
   panda_config_root: "/opt/idds/config/"
-  pandacache_url: https://panda-dev-server:25443/server/panda
-  panda_verify_host: off
+  pandacache_url: "https://panda-dev-server:25443/server/panda"
+  panda_verify_host: "off"
 
 hostcerts:
   enabled: false
