--- a/helm/panda/charts/jedi/templates/deployment.yaml
+++ b/helm/panda/charts/jedi/templates/deployment.yaml
@@ -58,6 +58,7 @@ spec:
       labels:
         {{- include "jedi.selectorLabels" . | nindent 8 }}
     spec:
+      hostname:  {{ include "jedi.fullname" . }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
