--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -8,5 +8,11 @@
     },
     "tasksetup": {
         "modConfig": "wlcg:any:pandajedi.jedisetup.SimpleTaskSetupper:SimpleTaskSetupper"
+    },
+    "msgprocessor": {
+        "configFile": "/etc/panda/jedi_msg_proc_config.json"
+    },
+    "mq": {
+        "configFile": "/etc/panda/jedi_mq_config.json"
     }
 }
