--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -43,7 +43,6 @@ metadata:
   labels:
     {{- include "harvester.labels" . | nindent 4 }}
 spec:
-  hostname:  {{ include "harvester.fullname" . }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
@@ -59,6 +58,7 @@ spec:
       labels:
         {{- include "harvester.selectorLabels" . | nindent 8 }}
     spec:
+      hostname:  {{ include "harvester.fullname" . }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -96,9 +96,13 @@ spec:
             - name: {{ include "harvester.fullname" . }}-configjson
               mountPath: /opt/harvester/etc/configmap
             - name: {{ include "harvester.fullname" . }}-queueconfig
-              mountPath: /etc/harvester/queueconfig
+              mountPath: /opt/harvester/etc/queue_config
             - name: {{ include "harvester.fullname" . }}-sandbox
               mountPath: /opt/harvester/sandbox
+            {{- if .Values.pilotcerts.enabled }}
+            - name: {{ include "harvester.fullname" . }}-certs
+              mountPath: /opt/harvester/etc/cert
+            {{- end }}
           envFrom:
             - configMapRef:
                 {{- if .Values.database.config_ref }}
@@ -133,3 +137,8 @@ spec:
         - name: {{ include "harvester.fullname" . }}-sandbox
           configMap:
             name: {{ include "harvester.fullname" . }}-sandbox
+        {{- if .Values.pilotcerts.enabled }}
+        - name: {{ include "harvester.fullname" . }}-certs
+          configMap:
+              name: {{ include "harvester.fullname" . }}-certs
+        {{ end }}
