--- a/helm/idds/values-lsst.yaml
+++ b/helm/idds/values-lsst.yaml
@@ -22,8 +22,8 @@ daemon:
 
   conductor:
     brokers: activemq-dev
-    port: 61013
-    destination: /topic/iddspanda
+    port: 61613
+    destination: /queue/iddspanda
     username: FIXME_WRITER
     password: FIXME_PASS
 
