--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -79,7 +79,7 @@ spec:
               chmod +x /data/harvester/init-harvester;
               cp /opt/harvester/sandbox/run-harvester-crons /data/harvester/;
               chmod +x /data/harvester/run-harvester-crons;
-              cp /opt/harvester/sandbox/condor_config.local /data/harvester/;
+              cp /opt/harvester/sandbox/* /data/harvester/;
               {{- if .Values.noRoot }}
               /opt/harvester/etc/rc.d/init.d/run-harvester-services;
               {{- else }}
