--- a/helm/panda/charts/server/values.yaml
+++ b/helm/panda/charts/server/values.yaml
@@ -24,7 +24,7 @@ httpsProxy: ""
 rucioAccount: ""
 
 # run with non-root PID
-noRoot: true
+noRoot: false
 
 persistentvolume:
   # Set true to create PV
