update harvester cric

--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -36,5 +36,12 @@
     "queueList": [
       "ALL"
     ]
+  },
+  "cacher": {
+    "data": [
+      "ddmendpoints_objectstores.json||https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_ES",
+      "panda_queues.json||https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json",
+      "agis_ddmendpoints.json||https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/list/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1"
+    ]
   }
 }
