--- a/helm/harvester/values-lsst.yaml
+++ b/helm/harvester/values-lsst.yaml
@@ -8,8 +8,8 @@ harvester:
     create: false
     selector: false
 
-  httpProxy: "http://squid.slac.stanford.edu:3128"
-  httpsProxy: "http://squid.slac.stanford.edu:3128"
+  httpProxy: "http://atlsquid.slac.stanford.edu:3128"
+  httpsProxy: "http://atlsquid.slac.stanford.edu:3128"
   noProxy: "localhost,idds-dev-rest,panda-dev-server"
 
   experiment: "lsst"
