--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -43,7 +43,7 @@ database:
 
 panda:
   # panda server host and https port
-  host: "pandaserver-doma.cern.ch"
+  host: "panda-dev-server:443"
 
   # ID token and VO for OIDC/OAuth
   authIdToken: ""
